Fix caret not visible in input on autofill

--- a/src/components/InputWithSmartLabel/InputWithSmartLabel.module.scss
+++ b/src/components/InputWithSmartLabel/InputWithSmartLabel.module.scss
@@ -71,5 +71,6 @@
     box-shadow: 0 0 0 1000px transparent inset;
     transition: background-color 5000s ease-in-out 0s;
     -webkit-text-fill-color: #fff;
+    caret-color: #fff;
   }
 }
